# multi-agent-architectures

./: .gitignore  README.md
agents/: .env.example  pyproject.toml
agents/app/: __main__.py  agent_executor.py
agents/app/agents/: __init__.py  copywriting.py  creative_design.py  market_research.py
flink/: all.sql
infrastructure/: flink.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
producer/: messages.json  producer.properties.example  producer.py
